# fine-delay-sw

./: .gitignore  .gitmodules  Makefile  README  acam.c  calibrate.c  fd-core.c  fd-spec.c  fd-zio.c  fine-delay.h  gpio.c  i2c.c  onewire.c  pll.c  spi.c  time.c
NewLogger/: Makefile  fdelay-dumplog.c  fdelay-gs.c  pp.py
doc/: Makefile  fine-delay.in
doc/drawings/: analog_digital_delays.cdr  analog_digital_delays.eps  analog_digital_delays.txt  front_panels.eps  func.cdr  func.eps  func.txt  io_timing.cdr  io_timing.eps  io_timing.txt
hw/: acam_gpx.h  fd_main_regs.h  pll_config.h
kernel/: Makefile  acam.c  calibrate.c  calibration.c  fd-core.c  fd-irq.c  fd-zio.c  fine-delay.h  gpio.c  i2c.c  inttypes.h  onewire.c  pll.c  spi.c  time.c
kernel/hw/: acam_gpx.h  fd_channel_regs.h  fd_main_regs.h  vic_regs.h
lib/: .depend  .gitignore  Makefile  fdelay-board-time.c  fdelay-fread.c  fdelay-init.c  fdelay-lib.h  fdelay-list.c  fdelay-open-by-lun.c  fdelay-output.c  fdelay-pulse-tom.c  fdelay-pulse.c  fdelay-read.c  fdelay-tdc.c  fdelay-term.c  fdelay-time.c  fdelay.h
raw_tdc/: Makefile  speed_test.c  tdc_raw_dump.c
tdc2zmq/: CMakeLists.txt  fcounter.cpp  fcounter.hpp  freq_sub_plot.py  hist2_sub_plot.py  hist3_sub_plot.py  hist_sub_plot.py  histogram.cpp  histogram.hpp  histogram2.cpp  histogram2.hpp  tdc.proto  tdc2zmq.cpp  ts.hpp  tstamp_publisher.hpp
tools/: .gitignore  Makefile  fd-raw-gettime.c  fd-raw-input.c  fd-raw-output.c  fd-raw-perf.c  fd-raw-settime.c  fdelay-raw.h  load.sh  parport-burst.c
